refactor: Use Saver instead of pure Repo in Create endpoint
